# cmake-project-template

./: .clang-format  .clang-format-ignore  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  vcpkg.json
cmake/: buildinfo.cmake  compilerflags.cmake  git_tools.cmake  print_properties.cmake  safeguards.cmake  utils.cmake  vcpkg_setup.cmake
include/: foo.hpp
scripts/: vcpkg-setup.sh
src/: main.cc
